--- a/client.htm
+++ b/client.htm
@@ -280,8 +280,28 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-85729.htm">长沙宠物领养贴吧 长沙宠物领养贴吧论坛</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于长沙宠物领养贴吧的问题，于是小编就整理了4个相关介绍长沙宠物领养贴吧的解答，让我们一起看看吧。请问长沙有没有收留藏獒的地方？长沙</p>
+                <h4><a href="/free-nodes/2025-4-12-node-share-links.htm">4月12日更新18.1M/S，2025年最新高速Shadowrocket/SSR/V2ray/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、欧洲、韩国、香港、美国、新加坡、加拿大等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-90080.htm">微服务nacos简单部署+网关设置+日志管理</a></h4>
+                <p>1.nacos简单部署 2.网关设置 3日志管理.   nacos引用的主要依赖是然后在配置文件进行注册（需要提前启动nacos插件，默认密码都是nacos）       &lt;dependency</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-4-24-free-high-speed-nodes.htm">4月24日更新21.6M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、香港、欧洲、美国、日本、加拿大、新加坡等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -300,8 +320,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-109331.htm">不能养什么狗狗（四种不能养的狗）</a></h4>
-                <p>摘要：       今天给各位分享不能养什么狗狗的知识，其中也会对四种不能养的狗进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、世界上有很多不适合养殖的危险的.</p>
+                <h4><a href="/news/article-92323.htm">动物疫苗知识大全图片（动物疫苗的了解）</a></h4>
+                <p>摘要：       今天给各位分享动物疫苗知识大全图片的知识，其中也会对动物疫苗的了解进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、狗狗打的预防针,国产的跟.</p>
             </div>
         </div>
     </div>
@@ -310,8 +330,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-86453.htm">哪里可以免费领养猫咪（哪里可以免费领养猫咪的猫）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈哪里可以免费领养猫咪，以及哪里可以免费领养猫咪的猫对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、哪里可以领养猫?2、...       </p>
+                <h4><a href="/free-nodes/2025-4-4-free-high-speed-nodes.htm">4月4日更新20.5M/S，2025年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、美国、欧洲、香港、韩国、新加坡、加拿大等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -320,8 +340,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-25-free-high-speed-nodes.htm">4月25日更新22.2M/S，2025年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、欧洲、新加坡、加拿大、日本、美国、韩国等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-4-23-free-ssr-node.htm">4月23日更新18.1M/S，2025年最新高速Shadowrocket/SSR/V2ray/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、欧洲、韩国、香港、日本、加拿大、新加坡等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -330,8 +350,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-96083.htm">天宫院附近宠物医院有哪些（天宫院附近有什么好玩的）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈天宫院附近宠物医院有哪些，以及天宫院附近有什么好玩的对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、常州宠物医院2、...        </p>
+                <h4><a href="/free-nodes/2025-4-14-free-clash-subscribe.htm">4月14日更新20.9M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、欧洲、新加坡、美国、加拿大、日本、韩国等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -340,8 +360,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-109328.htm">QT学习-08-Qt连接Sqllite数据库</a></h4>
-                <p>QT连接sqllite数据库  1.SQLlite简述： SQLite是一款开源轻量级的数据库软件，不需要server，可以集成在其他软件中，非常适合嵌入式系统。Qt5以上版本可以直接使用SQLite</p>
+                <h4><a href="/free-nodes/2025-4-11-clash-node-daily-updates.htm">4月11日更新21.7M/S，2025年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、日本、韩国、欧洲、美国、新加坡、加拿大等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -350,28 +370,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-9-node-share-links.htm">4月9日更新21.7M/S，2025年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了日本、加拿大、欧洲、新加坡、韩国、香港、美国等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-5-13-free-clash-subscribe.htm">5月13日更新22.7M/S，2025年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了日本、韩国、香港、欧洲、加拿大、新加坡、美国等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-5-16-clash-node.htm">5月16日更新18.5M/S，2025年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、香港、日本、新加坡、欧洲、加拿大、美国等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-97507.htm">动物医院名字大全集图片（动物医院牌匾）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈动物医院名字大全集图片，以及动物医院牌匾对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、请帮忙起个宠物医院的名字...        本篇</p>
             </div>
         </div>
     </div>
@@ -382,7 +382,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
                                 <h4><span class="badge" style="float: right;">82</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                             </div>
         </div>
